Fix input style with Safari on iOS (#62)

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -36,6 +36,8 @@
 }
 
 input[type="text"], input[type="password"] {
+  /* Reset for Safari on iOS */
+  -webkit-appearance: none;
   padding: 10px 15px;
   border: 2px solid #e7e7e7;
   font-size: 16px;
